[project]
name = "team-claude-billing-notifier"
version = "0.1.0"
description = "Claude Team 정기결제 알림 발송 (GitHub Actions에서 실행)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
